--- a/databas/layout.html.erb
+++ b/databas/layout.html.erb
@@ -7,13 +7,13 @@
 </head>
 <body>
 	<div id="container">
-		<div id="header"><img src="./images/header.png"></div>
+		<div id="header"><img src="<%= @header %>"></div>
 		<div id="menu">
-			<img id="hem" src="./images/hem.png">
-			<img id="lev" src="./images/leverantor.png">
-			<img id="kat" src="./images/kategorier.png">
-			<img id="land" src="./images/lander.png">
-			<img id="kon" src="./images/konton.png">
+			<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
+			<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
+			<a href="kategorier.html"><img id="kat" src="./images/kategorier.png"></a>
+			<a href="lander.html"><img id="land" src="./images/lander.png"></a>
+			<a href="konton.html"><img id="kon" src="./images/konton.png"></a>
 		</div>
 		<%= yield %>
 	</div>	
