--- a/databas/konton.html.erb
+++ b/databas/konton.html.erb
@@ -1,2 +1,26 @@
 <div id="val">
+		<button type="button" id="visa">Visa Konton</button>
+		<button type="button" id="skapa" onclick="showHide('skapa');return false;">Skapa Konto</button>
+	<div id="skapa">
+		<button type="button" id="konsult">Konsult Konto</button>
+		<button type="button" id="anstalld">Anställd Konto</button>
+		<button type="button" id="avbryt">Avbryt</button>
+	</div>
 </div>
+
+<script type="text/javascript">
+function showHide(shID) {
+	if (document.getElementById(shID)) {
+		if (document.getElementById(shID+'-show').style.display != 'none') {
+			document.getElementById(shID+'-show').style.display = 'none';
+			document.getElementById(shID).style.display = 'block';
+		}
+		else {
+			document.getElementById(shID+'-show').style.display = 'inline';
+			document.getElementById(shID).style.display = 'none';
+		}
+	}
+}
+</script>
+
+<!-- http://www.cssnewbie.com/showhide-content-css-javascript/ -->
