--- a/databas/layout.html.erb
+++ b/databas/layout.html.erb
@@ -6,7 +6,7 @@
 	<title>Coop</title>
 </head>
 <body>
-	<div id="header"><img src="<%= @header %>"></div>
+	<div id="header"><img src="<%= @header %>"><button type="button" id="logut" onclick="alert('du ar inte ens inloggad smartass..')">Logga ut</button></div>
 	<div id="menu">
 		<a href="hem.html"><img id="hem" src="./images/hem.png"></a>
 		<a href="leverantor.html"><img id="lev" src="./images/leverantor.png"></a>
