--- a/databas/public/layout.css
+++ b/databas/public/layout.css
@@ -56,3 +56,48 @@ p {
 	border: 10px solid #f93e3f;
 	border-radius: 40px;
 }
+
+#visa {
+	position: absolute;
+	margin-left: 140px;
+	margin-top: 100px;
+	width: 120px;
+	height: 50px;
+}
+
+#skapa {
+	position: absolute;
+	margin-left: 140px;
+	margin-top: 170px;
+	width: 120px;
+	height: 50px;
+}
+
+#logut {
+	position: relative;
+	float: right;
+	margin-right: 50px;
+	margin-bottom: 50px; 
+}
+
+#konsult {
+	position: absolute;
+	margin-top: -70px;
+	width: 120px;
+	height: 50px;
+	display: none;
+}
+
+#anstalld {
+	position: absolute;
+	width: 120px;
+	height: 50px;
+	display: none;
+}
+
+#avbryt {
+	position: absolute;
+	margin-left: 30px;
+	margin-top: 50px;
+	display: none;
+}
