tagit bort onödiga bilder #2

--- a/databas/konton.html.erb
+++ b/databas/konton.html.erb
@@ -1,8 +1,8 @@
 <div id="val">
 		<button type="button" id="visa">Visa Konton</button>
-		<button type="button" id="skapa" onclick="showHide('skapa');return false;">Skapa Konto</button>
-	<div id="skapa">
-		<button type="button" id="konsult">Konsult Konto</button>
+		<button type="button" id="skapa" class="showLink" onclick="showHide('skapa');return false;">Skapa Konto</button>
+	<div id="skapa" class="more">
+		<button type="button" id="konsult" class="hideLink" onclick="showHide('skapa');return false; ">Konsult Konto</button>
 		<button type="button" id="anstalld">Anställd Konto</button>
 		<button type="button" id="avbryt">Avbryt</button>
 	</div>
