--- a/databas/konton.html.erb
+++ b/databas/konton.html.erb
@@ -1,5 +1,5 @@
 <div id="val" class="ruta">
-		<button type="button" id="visa">Visa Konton</button>
+		<a href="./visakonton.html"><button type="button" id="visa">Visa Konton</button></a>
 		<a href="./skapakonto.html"><button type="button" id="skapa">Skapa Konto</button></a>
 
 
