--- a/databas/skapakonto.html.erb
+++ b/databas/skapakonto.html.erb
@@ -1,6 +1,6 @@
 <div id="skapakonto" class="ruta">
 		<button type="button" id="konsult">Konsult Konto</button>
 		<button type="button" id="anstalld">Anställd Konto</button>
-		<button type="button" id="avbryt">Avbryt</button>
+		<a href="./konton.html"><button type="button" id="avbryt">Avbryt</button></a>
 	</div>
 </div>
