--- a/databas/layout.css
+++ b/databas/layout.css
@@ -5,7 +5,9 @@
 }
 
 #menu {
-	width: 1366px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
 	height: 80px;
 }
 
@@ -102,29 +104,55 @@ p {
 	margin-top: 250px;
 }
 
-#tillbaka {
+.tillbaka {
 	position: relative;
 	float: left;
-	margin-top: 300px;
-	margin-left: 25px;
+	margin-top: 130px;
+	margin-left: 33px;
 	width: 65px;
 
 }
 
-#avbryter {
+.avbryter {
 	position: relative;
 	float: left;
-	margin-top: 300px;
+	margin-top: 130px;
 	margin-left: 20px;
 	width: 65px;
 }
 
 #username {
-	margin-top: 70px;
-	margin-left: -50px;
+	margin-top: 55px;
+	margin-left: 30%;
+	width: 169px;
 }
 
 #behorighet {
-	margin-top: 100px;
-	
+	margin-top: 10px;
+	margin-left: 30%;
 }
+
+.spara {
+	float: right;
+	margin-right: 25px;
+	margin-top: 130px;
+}
+
+#add {
+	margin-left: -16%;
+	margin-top: 10px;
+}
+
+h2 {
+	margin-left: -10px;
+}
+
+form {
+	margin-left: 120px;
+	margin-top: 5px;
+}
+
+#anstalldkonto button {
+	margin-top: 95px;
+}
+
