--- a/databas/skapakonto.html.erb
+++ b/databas/skapakonto.html.erb
@@ -1,5 +1,5 @@
 <div id="skapakonto" class="ruta">
 		<a href="./konsult.html"><button type="button" id="konsult">Konsult Konto</button></a>
 		<a href="./anstalld.html"><button type="button" id="anstalld">Anställd Konto</button></a>
-		<a href="./konton.html"><button type="button" id="avbryt">Avbryt</button></a>
+		<a href="./konton.html"><button type="button" id="avbryt">Tillbaka</button></a>
 </div>
