--- a/databas/public/layout.css
+++ b/databas/public/layout.css
@@ -5,9 +5,7 @@
 }
 
 #menu {
-	margin-left: auto;
-	margin-right: auto;
-	width: 100%;
+	width: 1366px;
 	height: 80px;
 }
 
@@ -100,7 +98,7 @@ p {
 
 #avbryt {
 	position: absolute;
-	margin-left: 170px;
+	margin-left: 165px;
 	margin-top: 250px;
 }
 
