inloggning och icon
titelbild och inloggningssida.

--- a/databas/inloggning.html.erb
+++ b/databas/inloggning.html.erb
@@ -1,1 +1,7 @@
-<p>hej</p>
+<div class="loggain">
+	<input type="text" name="Användarnamn" placeholder="Användarnamn" class="username">
+	<input type="text" name="Lösenord" placeholder="Lösenord" id="password">
+	<a href="./hem.html"><button type="button" class="login">Logga in</button></a>
+	<a href="./newuser.html"><button type="button" id="newuser">Ny användare</button></a>
+
+</div>
