--- a/databas/visakonton.html.erb
+++ b/databas/visakonton.html.erb
@@ -1,1 +1,6 @@
-<a href="./konton.html"><button type="button" class="tillbaka">Tillbaka</button></a>
+<a href="./konton.html"><button type="button" id="tillbaka">Tillbaka</button></a>
+<ul>
+	<li>Oliver Mufasa, Ändrarbehörighet</li>
+	<li>Maryam Karlsson, Tittarbehörighet</li>
+	<li>Jannike Annorlunda, Konsult - Barnproffset  </li>
+</ul>
