--- a/databas/public/layout.css
+++ b/databas/public/layout.css
@@ -154,3 +154,61 @@ form {
 	margin-top: 95px;
 }
 
+#tillbaka {
+	margin-left: 25px;
+}
+
+li {
+	margin-top: 5px;
+	font-family: fantasy;
+}
+
+.loggain {
+	position: relative;
+	float: left;
+	width: 400px;
+	margin-left: 35%;
+	margin-top: 90px;
+	height: 350px; 
+	border: 10px solid #00aa47;
+	border-radius: 70px;
+}
+
+.username {
+	margin-top: 75px;
+	margin-left: 28%;
+	width: 169px;
+}
+
+#password {
+	margin-top: 20px;
+	margin-left: 28%;
+	width: 169px;
+}
+
+.login {
+	position: relative;
+	float: left;
+	margin-top: 100px;
+	margin-left: 143px;
+	width: 110px;
+}
+
+#newuser {
+	position: relative;
+	margin-left: 143px;
+	margin-top: 10px;
+	width: 110px;
+}
+
+#pickpassword {
+
+}
+
+#repeatpassword {
+
+}
+
+#back {
+	
+}
