--- a/databas/layout.html.erb
+++ b/databas/layout.html.erb
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="jquery.js"> </script>
 	<link rel="stylesheet" type="text/css" href="layout.css">
 	<meta charset="utf-8">
 	<title>oop</title>
 	<link rel="shortcut icon" href="./images/title1.png"/>
+	<script>
+	$(document).ready(function(){
+		$('#oj').hide;
+		// $("#OJ").click(function(){
+		// 	$("#OJinfo").toggle();
+
+
+		
+	});
+
+</script>
+
+
+
 </head>
 <body>
 	<% if @ignore_layout == nil %>
