--- a/databas/public/layout.css
+++ b/databas/public/layout.css
@@ -34,7 +34,7 @@ h3 {
 	margin-left: 30px;
 }
 
-p {
+.p {
 	margin-left: 50px;
 }
 
@@ -243,4 +243,50 @@ li {
 #kategori {
 	width: 1080px;
 	margin-left: 135px;
+	margin-top: 15px;
+}
+
+.grey {
+	background-color: lightblue;
+}
+
+#filt {
+	margin-left: 135px;
+	width: 80px;
+	margin-top: -20px;
+}
+
+.aktiv {
+	background-color: #00aa47;
+	width: 270px;
+	height: 50px;
+	border-radius: 15px;
+}
+
+#OJinfo {
+
+}
+
+.inaktiv {
+	background-color: lightgrey;
+	width: 270px;
+	height: 50px;
+	border-radius: 15px;
+}
+
+.utgar {
+	background-color: #ffae57;
+	width: 270px;
+	height: 50px; 
+	border-radius: 15px;
+}
+
+.levnamn {
+	margin-left: 10px;
+}
+
+p {
+	position: absolute;
+	margin-top: -30px;
+	margin-left: 250px;
 }
