--- a/databas/leverantor.html.erb
+++ b/databas/leverantor.html.erb
@@ -1,4 +1,6 @@
-<button type="button" class="filtrera">Filtrera</button>
+<button type="button" id="filtleft">Filtrera</button>
+
+<div id="status"><img src="./images/status.png"></div>
 
 <div>
  <script>
@@ -11,8 +13,8 @@
 
  </script>
 
-<div id="OJ" class="aktiv">
-	<h2 class="levnamn">OJ</h2> <p>+</p>
+<div id="OJ" class="utgar">
+	<h2 class="levnamn">OJ</h2> <p id="knapp">+</p>
 </div>
 
 <div id="OJinfo">
@@ -51,60 +53,3 @@
 	</tr>
 </div>
 </div>
-
-<!-- <div> -->
-<script>
-// 	$(document).ready(function(){
-// 		$('#barnproffsetinfo').hide();
-// 		$('p').click(function() {
-// 			$('#barnproffsetinfo').toggle();
-// 		});
-// 	});
-
-// </script>
-
-
-
-<!-- <div id="barnproffset" class="inaktiv">
-	<h2 class="levnamn">Barnproffset</h2> <p>+</p>
-</div>
-
-<div id="barnproffinfo">
-	<table id="kategori" border="1" cellspacing="0" cellpadding="2">
-	<tr>
-		<td>Land, Produktionsort</td>
-		<td>Kategori</td>
-		<td>Produkt</td>
-		<td>Certifiering</td>
-		<td>Riskpoäng produktsäkerhet</td>
-		<td>Riskpoäng CoC</td>
-		<td>Senaste revision produktsäkerhet</td>
-		<td>Antal avvikelser produktsäkerhet</td>
-		<td>Senaste revision CoC</td>
-		<td>Antal avvikelser CoC</td>
-		<td>Kommande revision CoC</td>
-		<td>Kommande revision produktsäkerhet</td>
-		<td>Hanteras av</td>
-		<td>Leverantör sedan</td>
-	</tr>
-	<tr>
-		<td>DE, Berlin</td>
-		<td>Juice</td>
-		<td>Äppel- och apelsinjuice</td>
-		<td>IFS</td>
-		<td>8</td>
-		<td>9</td>
-		<td>2012</td>
-		<td>-</td>
-		<td>-</td>
-		<td>-</td>
-		<td>-</td>
-		<td>2013</td>
-		<td>CT</td>
-		<td>-</td>
-	</tr>
-</div>
-</div> -->
-<!-- <div id="Olivers oliver" class="utgar">
-	<h2 class="levnamn">Olivers oliver</h2>
-</div> -->
