--- a/databas/inloggning.html.erb
+++ b/databas/inloggning.html.erb
@@ -1,4 +1,5 @@
 <div class="loggain">
+	<img src="./images/smallheader.png" class="smallheader">
 	<input type="text" name="Användarnamn" placeholder="Användarnamn" class="username">
 	<input type="text" name="Lösenord" placeholder="Lösenord" id="password">
 	<a href="./hem.html"><button type="button" class="login">Logga in</button></a>
