--- a/databas/leverantor.html.erb
+++ b/databas/leverantor.html.erb
@@ -1,6 +1,6 @@
 <button type="button" id="filtleft">Filtrera</button>
 
-<div id="status"><img src="./images/status.png"></div>
+<div id="status"><img src="./images/status2.png"></div>
 
 <div>
  <script>
