--- a/databas/layout.css
+++ b/databas/layout.css
@@ -1,6 +1,6 @@
 #header {
 	width: 100%;
-	height: 120px;
+	height: 90px;
 	background-color: white;
 }
 
@@ -26,8 +26,14 @@
 	position: relative;
 	float: left;
 	width: 400px;
-	border: 1px solid black;
+	border: 4px solid #333;
 	border-radius: 40px;
+	background-color: #EEE;
+	margin-top: -10px;
+}
+
+p {
+	font-family: Arial;
 }
 
 h3 {
@@ -73,11 +79,17 @@ h3 {
 	height: 50px;
 }
 
-#logut {
-	position: relative;
+#inloggadsom {
 	float: right;
-	margin-right: 50px;
+	margin-right: 80px;
+	font-size: 13pt;
+}
+
+#logut {
+	float: right;
+	margin-right: -290px;
 	margin-bottom: 50px; 
+	margin-top: 13px;
 }
 
 #konsult {
@@ -175,7 +187,7 @@ li {
 }
 
 .username {
-	margin-top: 75px;
+	margin-top: 45px;
 	margin-left: 28%;
 	width: 169px;
 }
@@ -214,13 +226,13 @@ li {
 }
 
 #back {
-	margin-top: 10px;
+	margin-top: 8px;
 	margin-left: 143px;
 	width: 110px;
 }
 
 #loggain {
-	margin-top: 57px;
+	margin-top: 55px;
 }
 
 #landkod {
@@ -257,7 +269,7 @@ li {
 }
 
 .aktiv {
-	background-color: #00aa47;
+	background-color: #7bfd4f;
 	width: 270px;
 	height: 50px;
 	border-radius: 15px;
@@ -271,9 +283,9 @@ li {
 }
 
 .utgar {
-	background-color: #ffae57;
+	background-color:#FF5FB4;/* #ffae57;*/
 	width: 270px;
-	height: 50px; 
+	height: 30px; 
 	border-radius: 15px;
 }
 
@@ -283,7 +295,7 @@ li {
 
 #knapp {
 	position: absolute;
-	margin-top: -30px;
+	margin-top: -40px;
 	margin-left: 250px;
 }
 
@@ -294,4 +306,24 @@ li {
 
 #status {
 	float: right;
+}
+
+.smallheader {
+	margin-top: 10px;
+}
+
+#miss {
+	color: #990033;
+}
+
+#plan {
+	color: #39F;
+}
+
+#kom {
+	color: #909;
+}
+
+#fakelink {
+	text-decoration: underline;
 }
