--- a/databas/public/layout.css
+++ b/databas/public/layout.css
@@ -271,14 +271,14 @@ li {
 .aktiv {
 	background-color: #7bfd4f;
 	width: 270px;
-	height: 50px;
+	height: 30px;
 	border-radius: 15px;
 }
 
 .inaktiv {
 	background-color: lightgrey;
 	width: 270px;
-	height: 50px;
+	height: 30px;
 	border-radius: 15px;
 }
 
@@ -293,7 +293,7 @@ li {
 	margin-left: 10px;
 }
 
-#knapp {
+.knapp {
 	position: absolute;
 	margin-top: -40px;
 	margin-left: 250px;
